--- a/views/index.ejs
+++ b/views/index.ejs
@@ -162,7 +162,7 @@
               <div
                 class="swiper-slide dark"
                 style="
-                  background-image: url('https://themes.semicolonweb.com/html/canvas/v5/demos/business/images/slider/1.jpg');
+                  background-image: url('/img/slider2.jpg');
                   background-size: cover;
                 "
               >
@@ -170,7 +170,7 @@
                   <div class="slider-caption slider-caption-center">
                     <h2 class="font-primary nott">Easy Access</h2>
                     <p class="t300 font-primary d-none d-sm-block">
-                      Lorem ipsum dolor, sit amet consectetur adipisicing.
+                      Seamless file retrieval made simple.
                     </p>
                     <a
                       href="#"
@@ -183,15 +183,15 @@
               <div
                 class="swiper-slide dark"
                 style="
-                  background-image: url('https://themes.semicolonweb.com/html/canvas/v5/demos/business/images/slider/2.jpg');
+                  background-image: url('/img/slider3.jpg');
                   background-size: cover;
                 "
               >
                 <div class="container clearfix">
                   <div class="slider-caption slider-caption-center">
-                    <h2 class="font-primary">Speedy Download</h2>
+                    <h2 class="font-primary">Easy Collaboration</h2>
                     <p class="t300 font-primary d-none d-sm-block">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Simplify file collaboration with seamless teamwork.
                     </p>
                     <a
                       href="#"
@@ -238,10 +238,12 @@
                   data-rotate="fadeInRight"
                   data-speed="3500"
                 >
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Earum, perspiciatis? Quam sint rerum vero non, distinctio sit
-                  error in consectetur. Lorem ipsum dolor sit amet, consectetur
-                  adipisicing elit. Suscipit, nesciunt?
+                  Welcome to our file-sharing website dedicated to private
+                  clients. We provide a secure and confidential platform for
+                  seamless file sharing, ensuring your sensitive data remains
+                  protected. Collaborate with confidence and enjoy hassle-free
+                  file transfers, robust encryption, and personalized user
+                  access controls.
                 </h3>
               </div>
               <div class="clear"></div>
@@ -259,9 +261,10 @@
                     </div>
                     <div class="fbox-desc">
                       <h3 class="nott ls0 t600">
-                        Lorem, ipsum dolor.<span
+                        Advanced File Encryption.<span
                           class="subtitle font-secondary t300 ls0"
-                          >Lorem ipsum dolor sit amet consectetur.</span
+                          >Protect your files with robust encryption
+                          technology.</span
                         >
                       </h3>
                       <a href="#" class="button-link noborder color"
@@ -282,9 +285,10 @@
                     </div>
                     <div class="fbox-desc">
                       <h3 class="nott ls0 t600">
-                        Lorem, ipsum dolor.<span
+                        Personalized User Access Controls<span
                           class="subtitle font-secondary t300 ls0"
-                          >Lorem ipsum dolor sit amet.</span
+                          >Control who can view, edit, and share your
+                          files.</span
                         >
                       </h3>
                       <a href="#" class="button-link noborder color"
@@ -305,10 +309,10 @@
                     </div>
                     <div class="fbox-desc">
                       <h3 class="nott ls0 t600">
-                        Lorem, ipsum dolor.<span
+                        Seamless File Collaboration<span
                           class="subtitle font-secondary t300 ls0"
-                          >Lorem ipsum dolor sit amet consectetur
-                          adipisicing.</span
+                          >Collaborate with ease on shared files in
+                          real-time.</span
                         >
                       </h3>
                       <a href="#" class="button-link noborder color"
@@ -320,82 +324,6 @@
               </div>
             </div>
           </div>
-
-          <!-- <div class="section nobg clearfix">
-            <div class="container clearfix">
-              <div
-                class="heading-block bottommargin-lg center noborder"
-                data-heading="W"
-              >
-                <h3 class="nott ls0">How We Work</h3>
-              </div>
-            </div>
-
-            <div
-              id="oc-features"
-              class="owl-carousel owl-carousel-full image-carousel carousel-widget"
-            >
-              <div class="oc-item">
-                <div class="row cleafix">
-                  <div class="col-xl-8">
-                    <img
-                      src="https://themes.semicolonweb.com/html/canvas/v5/demos/business/images/carousel/1.jpg"
-                      alt=""
-                    />
-                  </div>
-                  <div class="col-xl-4" style="padding: 20px 0 0 20px">
-                    <h3>Great Team Work.</h3>
-                    <p>
-                      Uniquely plagiarize dynamic convergence after equity
-                      invested experiences. Holisticly repurpose installed base
-                      infomediaries before web-enabled methods of empowerment.
-                    </p>
-                    <a href="#" class="button-link">Read More</a>
-                  </div>
-                </div>
-              </div>
-              <div class="oc-item">
-                <div class="row cleafix">
-                  <div class="col-xl-8">
-                    <img
-                      src="https://themes.semicolonweb.com/html/canvas/v5/demos/business/images/carousel/2.jpg"
-                      alt=""
-                    />
-                  </div>
-                  <div class="col-xl-4" style="padding: 20px 0 0 20px">
-                    <h3>Amazing Career Prospects.</h3>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      Dolor mollitia dignissimos, assumenda consequuntur
-                      consectetur! Laborum reiciendis, accusamus possimus et
-                      similique nisi obcaecati ex doloremque ea odio.
-                    </p>
-                    <a href="#" class="button-link">Read More</a>
-                  </div>
-                </div>
-              </div>
-              <div class="oc-item">
-                <div class="row cleafix">
-                  <div class="col-xl-8">
-                    <img
-                      src="https://themes.semicolonweb.com/html/canvas/v5/demos/business/images/carousel/3.jpg"
-                      alt=""
-                    />
-                  </div>
-                  <div class="col-xl-4" style="padding: 20px 0 0 20px">
-                    <h3>Beautiful Workspace.</h3>
-                    <p>
-                      Dolor mollitia dignissimos, assumenda consequuntur
-                      consectetur! Laborum reiciendis, error explicabo
-                      consectetur adipisci, accusamus possimus et similique nisi
-                      obcaecati ex doloremque ea odio.
-                    </p>
-                    <a href="#" class="button-link">Read More</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div> -->
 
           <div
             class="section nopadding notopmargin nobg clearfix"
@@ -425,10 +353,10 @@
                         <div class="fbox-icon">
                           <a href="#"><i class="icon-et-globe"></i></a>
                         </div>
-                        <h3>Lorem, ipsum dolor.</h3>
+                        <h3>Our Mission</h3>
                         <p>
-                          Lorem ipsum, dolor sit amet consectetur adipisicing
-                          elit. Sed ea optio autem.
+                          Empowering seamless file sharing for individuals and
+                          businesses worldwide.
                         </p>
                       </div>
                     </div>
@@ -437,10 +365,10 @@
                         <div class="fbox-icon">
                           <a href="#"><i class="icon-et-gears"></i></a>
                         </div>
-                        <h3>Lorem, ipsum.</h3>
+                        <h3>Our Team</h3>
                         <p>
-                          Lorem ipsum dolor sit amet consectetur, adipisicing
-                          elit. Fugiat facilis quasi deleniti labore natus.
+                          Meet our passionate team dedicated to enhancing your
+                          file sharing experience.
                         </p>
                       </div>
                     </div>
@@ -449,11 +377,10 @@
                         <div class="fbox-icon">
                           <a href="#"><i class="icon-et-document"></i></a>
                         </div>
-                        <h3>Lorem, ipsum.</h3>
+                        <h3>Our Commitment to Privacy</h3>
                         <p>
-                          Lorem ipsum, dolor sit amet consectetur adipisicing
-                          elit. Repudiandae reiciendis tempore saepe dolor
-                          recusandae.
+                          Ensuring the highest level of privacy and security for
+                          your files.
                         </p>
                       </div>
                     </div>
@@ -671,7 +598,7 @@
             </div>
           </div> -->
 
-          <div class="section nobg notopmargin clearfix">
+          <!-- <div class="section nobg notopmargin clearfix">
             <div class="container clearfix">
               <div class="col_one_third">
                 <div class="feature-box fbox-plain">
@@ -837,7 +764,7 @@
                 </div>
               </div> -->
             </div>
-          </div>
+          </div> -->
 
           <!-- <div
             class="section parallax topmargin-lg nobottommargin notopborder clearfix"
@@ -1117,13 +1044,13 @@
                 alt=""
                 class="footer-logo"
               />
-              Copyrights &copy; 2014 All Rights Reserved by Canvas Inc.
+              Copyrights &copy; 2023 All Rights Reserved by LOGO.
             </div>
             <div class="col_half col_last tright">
               <div class="copyrights-menu copyright-links fright clearfix">
-                <a href="#">Home</a>/<a href="#">About</a>/<a href="#"
-                  >Features</a
-                >/<a href="#">Portfolio</a>/<a href="#">FAQs</a>/<a href="#"
+                <a href="#">Home</a>/<a href="#">Files</a>/<a href="#"
+                  >About</a
+                >/<a href="#">Login</a>/<a href="#"
                   >Contact</a
                 >
               </div>
