--- a/views/index.ejs
+++ b/views/index.ejs
@@ -74,7 +74,11 @@
       href="https://themes.semicolonweb.com/html/canvas/v5/demos/business/css/colors.css"
       type="text/css"
     />
-
+    <style>
+      .fbox-icon>a>i{
+        color:black !important;
+      }
+    </style>
     <title>File Manager</title>
   </head>
   <body class="stretched">
@@ -175,6 +179,7 @@
                     <a
                       href="#"
                       class="button button-rounded button-large nott ls0 font-primary"
+                      style="background-color:black !important"
                       >Go to files</a
                     >
                   </div>
@@ -196,6 +201,7 @@
                     <a
                       href="#"
                       class="button button-rounded button-large nott ls0 font-primary"
+                      style="background-color:black !important"
                       >Get Started</a
                     >
                   </div>
@@ -267,9 +273,7 @@
                           technology.</span
                         >
                       </h3>
-                      <a href="#" class="button-link noborder color"
-                        >Read More</a
-                      >
+                      
                     </div>
                   </div>
                 </div>
@@ -291,9 +295,7 @@
                           files.</span
                         >
                       </h3>
-                      <a href="#" class="button-link noborder color"
-                        >Read More</a
-                      >
+                      
                     </div>
                   </div>
                 </div>
@@ -315,9 +317,7 @@
                           real-time.</span
                         >
                       </h3>
-                      <a href="#" class="button-link noborder color"
-                        >Read More</a
-                      >
+                      
                     </div>
                   </div>
                 </div>
