contact page and login

--- a/views/files.ejs
+++ b/views/files.ejs
@@ -98,7 +98,7 @@
     .timeline-steps .timeline-step:not(:last-child):after {
         content: "";
         display: block;
-        border-top: .25rem dotted #3b82f6;
+        border-top: .25rem solid black;
         width: 3.46rem;
         position: absolute;
         left: 7.5rem;
@@ -107,7 +107,7 @@
     .timeline-steps .timeline-step:not(:first-child):before {
         content: "";
         display: block;
-        border-top: .25rem dotted #3b82f6;
+        border-top: .25rem solid black;
         width: 3.8125rem;
         position: absolute;
         right: 7.5rem;
@@ -127,7 +127,8 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    background-color: #3b82f6
+    background-color: #3b82f6;
+    opacity: .5
 }
 
 .timeline-steps .timeline-content .inner-circle:before {
@@ -138,7 +139,7 @@
     width: 3rem;
     min-width: 3rem;
     border-radius: 6.25rem;
-    opacity: .5
+    /* opacity: .5 */
 }
     </style>
   </head>
@@ -160,7 +161,7 @@
                               </div>'>
                                 <div class="inner-circle"></div>
                                 <p class="h6 mt-3 mb-1">12 July</p>
-                                <p class="h6 text-muted mb-0 mb-lg-0">Favland Founded</p>
+                                <p class="h6 text-muted mb-0 mb-lg-0"></p>
                             </div>
                         </div>
                         <div class="timeline-step">
@@ -173,7 +174,7 @@
                               </div>'>
                                 <div class="inner-circle"></div>
                                 <p class="h6 mt-3 mb-1">12 July</p>
-                                <p class="h6 text-muted mb-0 mb-lg-0">Favland Founded</p>
+                                <p class="h6 text-muted mb-0 mb-lg-0"></p>
                             </div>
                         </div>
                         <div class="timeline-step">
@@ -186,7 +187,7 @@
                               </div>'>
                                 <div class="inner-circle"></div>
                                 <p class="h6 mt-3 mb-1">12 July</p>
-                                <p class="h6 text-muted mb-0 mb-lg-0">Favland Founded</p>
+                                <p class="h6 text-muted mb-0 mb-lg-0"></p>
                             </div>
                         </div>
                         <div class="timeline-step">
@@ -199,7 +200,7 @@
                               </div>'>
                                 <div class="inner-circle"></div>
                                 <p class="h6 mt-3 mb-1">12 July</p>
-                                <p class="h6 text-muted mb-0 mb-lg-0">Favland Founded</p>
+                                <p class="h6 text-muted mb-0 mb-lg-0"></p>
                             </div>
                         </div>
                         <div class="timeline-step">
@@ -212,7 +213,7 @@
                               </div>'>
                                 <div class="inner-circle"></div>
                                 <p class="h6 mt-3 mb-1">12 July</p>
-                                <p class="h6 text-muted mb-0 mb-lg-0">Favland Founded</p>
+                                <p class="h6 text-muted mb-0 mb-lg-0"></p>
                             </div>
                         </div>
                        
