--- a/views/header.ejs
+++ b/views/header.ejs
@@ -42,10 +42,10 @@
             <a href="#"><div>About Us</div></a>
           </li>
           <li>
-            <a href="#"><div>Contact</div></a>
+            <a href="/contact"><div>Contact</div></a>
           </li>
           <li>
-            <a href="#"><div>Login</div></a>
+            <a href="/login"><div>Login</div></a>
           </li>
         </ul>
       </nav>
