--- a/views/files.ejs
+++ b/views/files.ejs
@@ -4,7 +4,10 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="author" content="SemiColonWeb" />
-
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+  />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:300,400,400i,600,700|Open+Sans:300,400,600,700,800,900"
       rel="stylesheet"
@@ -81,65 +84,42 @@
     </style>
     <title>File Manager</title>
     <style>
-        .timeline-steps {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap
+      .timeline {
+  display: flex;
+  padding: 10% 7%;
+  align-items: center;
+  justify-content: center;
 }
-        .timeline-steps .timeline-step {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    margin: 1rem
+.timeline .node {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  border: 2px solid black;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 6px;
+  background-color: white;
+  transition: all 0.5s ease-in-out;
+  z-index: 1;
 }
-
-@media (min-width:768px) {
-    .timeline-steps .timeline-step:not(:last-child):after {
-        content: "";
-        display: block;
-        border-top: .25rem solid black;
-        width: 3.46rem;
-        position: absolute;
-        left: 7.5rem;
-        top: .3125rem
-    }
-    .timeline-steps .timeline-step:not(:first-child):before {
-        content: "";
-        display: block;
-        border-top: .25rem solid black;
-        width: 3.8125rem;
-        position: absolute;
-        right: 7.5rem;
-        top: .3125rem
-    }
+.timeline .node:hover {
+  transform: scale(1.2);
 }
-
-.timeline-steps .timeline-content {
-    width: 10rem;
-    text-align: center
+.timeline .node:hover i {
+  transform: translateY(-6px);
+  transform: scale(1.2);
 }
-
-.timeline-steps .timeline-content .inner-circle {
-    border-radius: 1.5rem;
-    height: 1rem;
-    width: 1rem;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #3b82f6;
-    opacity: .5
+.timeline .node i {
+  font-size: 24px;
+  transition: all 0.5s ease-in-out;
+  color: black;
 }
-
-.timeline-steps .timeline-content .inner-circle:before {
-    content: "";
-    background-color: #3b82f6;
-    display: inline-block;
-    height: 3rem;
-    width: 3rem;
-    min-width: 3rem;
-    border-radius: 6.25rem;
-    /* opacity: .5 */
+.timeline .line {
+  width: 60px;
+  height: 3px !important;
+  background-color: black;
 }
     </style>
   </head>
@@ -147,82 +127,19 @@
     <div id="wrapper" class="clearfix">
         <%- include('header'); -%>
 
-        <div class="container" style="margin-top: 10%">                      
-            <div class="row">
-                <div class="col">
-                    <div class="timeline-steps aos-init aos-animate" data-aos="fade-up">
-                        <div class="timeline-step">
-                            <div class="timeline-content" data-toggle="popover" animation="false"  data-html="true"  data-trigger="hover focus" data-placement="top" title="<b>Files</b>"  data-content='<div class="list-group">
-                                
-                                <a href="#" class="list-group-item list-group-item-action">doc.jpg</a>
-                                <a href="#" class="list-group-item list-group-item-action">doc.jpg</a>
-                                <a href="#" class="list-group-item list-group-item-action">doc.jpg</a>
-                                <a href="#" class="list-group-item list-group-item-action">doc.jpg</a>
-                              </div>'>
-                                <div class="inner-circle"></div>
-                                <p class="h6 mt-3 mb-1">12 July</p>
-                                <p class="h6 text-muted mb-0 mb-lg-0"></p>
-                            </div>
-                        </div>
-                        <div class="timeline-step">
-                            <div class="timeline-content" data-toggle="popover" animation="false"  data-html="true"  data-trigger="hover focus" data-placement="top" title="<b>Files</b>"  data-content='<div class="list-group">
-                                
-                                <a href="#" class="list-group-item list-group-item-action">doc.jpg</a>
-                                <a href="#" class="list-group-item list-group-item-action">doc.jpg</a>
-                                <a href="#" class="list-group-item list-group-item-action">doc.jpg</a>
-                                <a href="#" class="list-group-item list-group-item-action">doc.jpg</a>
-                              </div>'>
-                                <div class="inner-circle"></div>
-                                <p class="h6 mt-3 mb-1">12 July</p>
-                                <p class="h6 text-muted mb-0 mb-lg-0"></p>
-                            </div>
-                        </div>
-                        <div class="timeline-step">
-                            <div class="timeline-content" data-toggle="popover" animation="false"  data-html="true"  data-trigger="hover focus" data-placement="top" title="<b>Files</b>"  data-content='<div class="list-group">
-                                
-                                <a href="#" class="list-group-item list-group-item-action">doc.jpg</a>
-                                <a href="#" class="list-group-item list-group-item-action">doc.jpg</a>
-                                <a href="#" class="list-group-item list-group-item-action">doc.jpg</a>
-                                <a href="#" class="list-group-item list-group-item-action">doc.jpg</a>
-                              </div>'>
-                                <div class="inner-circle"></div>
-                                <p class="h6 mt-3 mb-1">12 July</p>
-                                <p class="h6 text-muted mb-0 mb-lg-0"></p>
-                            </div>
-                        </div>
-                        <div class="timeline-step">
-                            <div class="timeline-content" data-toggle="popover" animation="false"  data-html="true"  data-trigger="hover focus" data-placement="top" title="<b>Files</b>"  data-content='<div class="list-group">
-                                
-                                <a href="#" class="list-group-item list-group-item-action">doc.jpg</a>
-                                <a href="#" class="list-group-item list-group-item-action">doc.jpg</a>
-                                <a href="#" class="list-group-item list-group-item-action">doc.jpg</a>
-                                <a href="#" class="list-group-item list-group-item-action">doc.jpg</a>
-                              </div>'>
-                                <div class="inner-circle"></div>
-                                <p class="h6 mt-3 mb-1">12 July</p>
-                                <p class="h6 text-muted mb-0 mb-lg-0"></p>
-                            </div>
-                        </div>
-                        <div class="timeline-step">
-                            <div class="timeline-content" data-toggle="popover" animation="false"  data-html="true"  data-trigger="hover focus" data-placement="top" title="<b>Files</b>"  data-content='<div class="list-group">
-                                
-                                <a href="#" class="list-group-item list-group-item-action">doc.jpg</a>
-                                <a href="#" class="list-group-item list-group-item-action">doc.jpg</a>
-                                <a href="#" class="list-group-item list-group-item-action">doc.jpg</a>
-                                <a href="#" class="list-group-item list-group-item-action">doc.jpg</a>
-                              </div>'>
-                                <div class="inner-circle"></div>
-                                <p class="h6 mt-3 mb-1">12 July</p>
-                                <p class="h6 text-muted mb-0 mb-lg-0"></p>
-                            </div>
-                        </div>
-                       
-                        
-                    </div>
-                </div>
-            </div>
+        <div class="timeline">
+          <div class="node"><i class="far fa-file"></i></div>
+          <div class="line"></div>
+          <div class="node"><i class="far fa-file"></i></div>
+          <div class="line"></div>
+          <div class="node"><i class="far fa-file"></i></div>
+          <div class="line"></div>
+          <div class="node"><i class="far fa-file"></i></div>
+          <div class="line"></div>
+          <div class="node"><i class="far fa-file"></i></div>
+          <div class="line"></div>
+          <div class="node"><i class="far fa-file"></i></div>
         </div>
-
    
       </section>
 
