--- a/views/dashboard/style.css
+++ b/views/dashboard/style.css
@@ -33,5 +33,4 @@
   width: 60px;
   height: 2px;
   background-color: black;
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
