--- a/views/files.ejs
+++ b/views/files.ejs
@@ -85,6 +85,23 @@
       .fbox-icon>a>i{
         color:black !important;
       }
+      .navigation{
+        cursor: pointer;
+        color: black;
+        padding: 8px;
+        width: 50px;
+        height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: 300ms;
+        font-size: 18px;
+      }
+      .navigation:hover{
+        background-color: #79E0EE;
+        
+        border-radius: 50%;
+      }
     </style>
     <title>File Manager</title>
     
@@ -94,124 +111,46 @@
         <%- include('header'); -%>
 
         <div class="timeline">
-          <button class="next">Newer</button>
+          <a class="next navigation"><i class="fas fa-arrow-left"></i></a>
           <div class="timeline-slider">
           <div class="item">
-            <div class="node"><i class="far fa-file"></i></div>
+            <div class="node"><i class="far fa-file"></i>
+            <div class="date">12-12-16</div></div>
           <div class="line"></div>
           <div class="line"></div>
 
         </div>
         <div class="item">
-            <div class="node"><i class="far fa-file"></i></div>
+            <div class="node"><i class="far fa-file"></i> <div class="date">12-12-16</div></div>
           <div class="line"></div>
         </div>
         <div class="item">
-            <div class="node"><i class="far fa-file"></i></div>
+            <div class="node"><i class="far fa-file"></i> <div class="date">12-12-16</div></div>
             <div class="line"></div>
             <div class="line"></div>
         </div>
         <div class="item">
-            <div class="node"><i class="far fa-file"></i></div>
+            <div class="node"><i class="far fa-file"></i> <div class="date">12-12-16</div></div>
           <div class="line"></div>
         </div>
         <div class="item">
-          <div class="node"><i class="far fa-file"></i></div>
+          <div class="node"><i class="far fa-file"></i> <div class="date">12-12-16</div></div>
           <div class="line"></div>
 
           <div class="line"></div>
       </div>
       <div class="item">
-        <div class="node"><i class="far fa-file"></i></div>
+        <div class="node"><i class="far fa-file"></i> <div class="date">12-12-16</div></div>
       <div class="line"></div>
     </div>
 
           </div>
-          <button class="prev">Older</button>
+          <a class="prev navigation"><i class="fas fa-arrow-right"></i></a>
    </div>
       </section>
 
-      <footer id="footer" class="dark" style="margin-top: 64px !important;">
-        <div id="copyrights">
-          <div class="container clearfix">
-            <div class="col_half">
-              <img
-                src="https://themes.semicolonweb.com/html/canvas/v5/images/footer-logo.png"
-                alt=""
-                class="footer-logo"
-              />
-              Copyrights &copy; 2023 All Rights Reserved by LOGO.
-            </div>
-            <div class="col_half col_last tright">
-              <div class="copyrights-menu copyright-links fright clearfix">
-                <a href="#">Home</a>/<a href="#">Files</a>/<a href="#"
-                  >About</a
-                >/<a href="#">Login</a>/<a href="#"
-                  >Contact</a
-                >
-              </div>
-              <div class="fright clearfix">
-                <a
-                  href="#"
-                  class="social-icon si-small si-borderless nobottommargin si-facebook"
-                >
-                  <i class="icon-facebook"></i>
-                  <i class="icon-facebook"></i>
-                </a>
-                <a
-                  href="#"
-                  class="social-icon si-small si-borderless nobottommargin si-twitter"
-                >
-                  <i class="icon-twitter"></i>
-                  <i class="icon-twitter"></i>
-                </a>
-                <a
-                  href="#"
-                  class="social-icon si-small si-borderless nobottommargin si-gplus"
-                >
-                  <i class="icon-gplus"></i>
-                  <i class="icon-gplus"></i>
-                </a>
-                <a
-                  href="#"
-                  class="social-icon si-small si-borderless nobottommargin si-pinterest"
-                >
-                  <i class="icon-pinterest"></i>
-                  <i class="icon-pinterest"></i>
-                </a>
-                <a
-                  href="#"
-                  class="social-icon si-small si-borderless nobottommargin si-vimeo"
-                >
-                  <i class="icon-vimeo"></i>
-                  <i class="icon-vimeo"></i>
-                </a>
-                <a
-                  href="#"
-                  class="social-icon si-small si-borderless nobottommargin si-github"
-                >
-                  <i class="icon-github"></i>
-                  <i class="icon-github"></i>
-                </a>
-                <a
-                  href="#"
-                  class="social-icon si-small si-borderless nobottommargin si-yahoo"
-                >
-                  <i class="icon-yahoo"></i>
-                  <i class="icon-yahoo"></i>
-                </a>
-                <a
-                  href="#"
-                  class="social-icon si-small si-borderless nobottommargin si-linkedin"
-                >
-                  <i class="icon-linkedin"></i>
-                  <i class="icon-linkedin"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </footer>
+      <%- include('footer'); -%>
+
     </div>
 
     <div id="gotoTop" class="icon-angle-up"></div>
