--- a/views/index.ejs
+++ b/views/index.ejs
@@ -96,8 +96,9 @@
               <div
                 class="swiper-slide dark"
                 style="
-                  background-image: url('/img/slider2.jpg');
+                  background-image: url('https://images.unsplash.com/photo-1639322537504-6427a16b0a28?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1332&q=80');
                   background-size: cover;
+                  background-position: center top;
                 "
               >
                 <div class="container clearfix">
@@ -118,7 +119,7 @@
               <div
                 class="swiper-slide dark"
                 style="
-                  background-image: url('/img/slider3.jpg');
+                  background-image: url('https://images.unsplash.com/photo-1504966981333-1ac8809be1ca?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80');
                   background-size: cover;
                 "
               >
@@ -259,11 +260,11 @@
             class="section nopadding notopmargin nobg clearfix"
             style="border-top: 1px solid #eee; border-bottom: 1px solid #eee"
           >
-            <div class="row align-items-stretch clearfix">
+            <div class="row align-items-stretch clearfix" style="padding: 4% 0;">
               <div
                 class="col-lg-6 center col-padding"
                 style="
-                  background: url('/img/man.jpg') center center no-repeat;
+                  background: url('https://images.unsplash.com/photo-1574547777892-5046c9dae4b2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=435&q=80') center center no-repeat;
                   background-size: contain;
                 "
               >
@@ -965,87 +966,8 @@
         </div>
       </section>
 
-      <footer id="footer" class="dark">
-        <div id="copyrights">
-          <div class="container clearfix">
-            <div class="col_half">
-              <img
-                src="https://themes.semicolonweb.com/html/canvas/v5/images/footer-logo.png"
-                alt=""
-                class="footer-logo"
-              />
-              Copyrights &copy; 2023 All Rights Reserved by LOGO.
-            </div>
-            <div class="col_half col_last tright">
-              <div class="copyrights-menu copyright-links fright clearfix">
-                <a href="#">Home</a>/<a href="#">Files</a>/<a href="#"
-                  >About</a
-                >/<a href="#">Login</a>/<a href="#"
-                  >Contact</a
-                >
-              </div>
-              <div class="fright clearfix">
-                <a
-                  href="#"
-                  class="social-icon si-small si-borderless nobottommargin si-facebook"
-                >
-                  <i class="icon-facebook"></i>
-                  <i class="icon-facebook"></i>
-                </a>
-                <a
-                  href="#"
-                  class="social-icon si-small si-borderless nobottommargin si-twitter"
-                >
-                  <i class="icon-twitter"></i>
-                  <i class="icon-twitter"></i>
-                </a>
-                <a
-                  href="#"
-                  class="social-icon si-small si-borderless nobottommargin si-gplus"
-                >
-                  <i class="icon-gplus"></i>
-                  <i class="icon-gplus"></i>
-                </a>
-                <a
-                  href="#"
-                  class="social-icon si-small si-borderless nobottommargin si-pinterest"
-                >
-                  <i class="icon-pinterest"></i>
-                  <i class="icon-pinterest"></i>
-                </a>
-                <a
-                  href="#"
-                  class="social-icon si-small si-borderless nobottommargin si-vimeo"
-                >
-                  <i class="icon-vimeo"></i>
-                  <i class="icon-vimeo"></i>
-                </a>
-                <a
-                  href="#"
-                  class="social-icon si-small si-borderless nobottommargin si-github"
-                >
-                  <i class="icon-github"></i>
-                  <i class="icon-github"></i>
-                </a>
-                <a
-                  href="#"
-                  class="social-icon si-small si-borderless nobottommargin si-yahoo"
-                >
-                  <i class="icon-yahoo"></i>
-                  <i class="icon-yahoo"></i>
-                </a>
-                <a
-                  href="#"
-                  class="social-icon si-small si-borderless nobottommargin si-linkedin"
-                >
-                  <i class="icon-linkedin"></i>
-                  <i class="icon-linkedin"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </footer>
+      <%- include('footer'); -%>
+
     </div>
 
     <div id="gotoTop" class="icon-angle-up"></div>
