--- a/views/login.ejs
+++ b/views/login.ejs
@@ -70,9 +70,9 @@
       <section
         id="map-overlay"
         style="
-          background-image: url('https://images.unsplash.com/photo-1682685796063-d2604827f7b3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
+          background-image: url('https://cdn.pixabay.com/photo/2020/04/25/12/14/circle-5090539_960_720.jpg');
           background-size: cover;
-          background-position: center right;
+          background-position: center;
         "
       >
         <div class="container clearfix">
@@ -168,84 +168,8 @@
         <!-- <section id="google-map" class="gmap"></section> -->
       </section>
 
-      <footer id="footer" class="dark">
-        <div id="copyrights">
-          <div class="container clearfix">
-            <div class="col_half">
-              <img
-                src="https://themes.semicolonweb.com/html/canvas/v5/images/footer-logo.png"
-                alt=""
-                class="footer-logo"
-              />
-              Copyrights &copy; 2023 All Rights Reserved by LOGO.
-            </div>
-            <div class="col_half col_last tright">
-              <div class="copyrights-menu copyright-links fright clearfix">
-                <a href="#">Home</a>/<a href="#">Files</a>/<a href="#">About</a
-                >/<a href="#">Login</a>/<a href="#">Contact</a>
-              </div>
-              <div class="fright clearfix">
-                <a
-                  href="#"
-                  class="social-icon si-small si-borderless nobottommargin si-facebook"
-                >
-                  <i class="icon-facebook"></i>
-                  <i class="icon-facebook"></i>
-                </a>
-                <a
-                  href="#"
-                  class="social-icon si-small si-borderless nobottommargin si-twitter"
-                >
-                  <i class="icon-twitter"></i>
-                  <i class="icon-twitter"></i>
-                </a>
-                <a
-                  href="#"
-                  class="social-icon si-small si-borderless nobottommargin si-gplus"
-                >
-                  <i class="icon-gplus"></i>
-                  <i class="icon-gplus"></i>
-                </a>
-                <a
-                  href="#"
-                  class="social-icon si-small si-borderless nobottommargin si-pinterest"
-                >
-                  <i class="icon-pinterest"></i>
-                  <i class="icon-pinterest"></i>
-                </a>
-                <a
-                  href="#"
-                  class="social-icon si-small si-borderless nobottommargin si-vimeo"
-                >
-                  <i class="icon-vimeo"></i>
-                  <i class="icon-vimeo"></i>
-                </a>
-                <a
-                  href="#"
-                  class="social-icon si-small si-borderless nobottommargin si-github"
-                >
-                  <i class="icon-github"></i>
-                  <i class="icon-github"></i>
-                </a>
-                <a
-                  href="#"
-                  class="social-icon si-small si-borderless nobottommargin si-yahoo"
-                >
-                  <i class="icon-yahoo"></i>
-                  <i class="icon-yahoo"></i>
-                </a>
-                <a
-                  href="#"
-                  class="social-icon si-small si-borderless nobottommargin si-linkedin"
-                >
-                  <i class="icon-linkedin"></i>
-                  <i class="icon-linkedin"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </footer>
+      <%- include('footer'); -%>
+
     </div>
 
     <div id="gotoTop" class="icon-angle-up"></div>
