--- a/views/files.ejs
+++ b/views/files.ejs
@@ -143,6 +143,19 @@
         <div class="node"><i class="far fa-file"></i> <div class="date">12-12-16</div></div>
       <div class="line"></div>
     </div>
+    <div class="item">
+      <div class="node"><i class="far fa-file"></i> <div class="date">12-12-16</div></div>
+    <div class="line"></div>
+  </div>
+  <div class="item">
+    <div class="node"><i class="far fa-file"></i> <div class="date">12-12-16</div></div>
+  <div class="line"></div>
+  <div class="line"></div>
+</div>
+<div class="item">
+  <div class="node"><i class="far fa-file"></i> <div class="date">12-12-16</div></div>
+<div class="line"></div>
+</div>
 
           </div>
           <a class="prev navigation"><i class="fas fa-arrow-right"></i></a>
