--- a/static/css/timeline.scss
+++ b/static/css/timeline.scss
@@ -17,9 +17,9 @@
     padding: 3% 7%;
     align-items: center;
     justify-content: flex-start;
-    background-color: #E3F4F4;
+    // background-color: #E3F4F4;
     border-radius: 20px;
-    width: 50%;
+    width: 80%;
     overflow: hidden;
    
   }
