--- a/views/header.ejs
+++ b/views/header.ejs
@@ -47,6 +47,9 @@
           <li>
             <a href="/login"><div>Login</div></a>
           </li>
+          <li>
+            <a href="/dashboard"><div>Dashboard</div></a>
+          </li>
         </ul>
       </nav>
     </div>
