--- a/static/css/timeline.css
+++ b/static/css/timeline.css
@@ -24,6 +24,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: 0.5s;
 }
 .timeline .node {
   width: 12px !important;
