--- a/static/css/timeline.scss
+++ b/static/css/timeline.scss
@@ -1,6 +1,6 @@
 .timeline {
     display: flex;
-    padding: 10% 7%;
+    padding: 8% 7% 4%;
     align-items: center;
     justify-content: space-between;
     position: relative;
@@ -28,7 +28,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: 0.5s;
+    transition: 0.3s;
   }
     .node {
       width: 12px !important;
@@ -58,6 +58,10 @@
         // transform: translateY(-6px);        
         opacity: 0;
       }
+      &:hover *.description {
+        // transform: scale(1);        
+        opacity: 1;
+      }
       .date{
         font-size: 14px;
         position: absolute;
@@ -81,4 +85,24 @@
       background-color: black;
     }
   }
-  
+  .node:hover .description {
+    // transform: scale(1);        
+    opacity: 1;
+  }
+.description{
+  padding: 1% 7% 2%;
+  width: 50%;
+  margin: 0 auto;
+  text-align: center;
+  background-color: cadetblue;
+  margin-bottom: 16px;
+  border-radius: 12px;
+  // transform: scale(0);
+  transition: 0.3s;
+  opacity: 0;
+  h1{
+    margin: 8px;
+    font-size: 28px;
+  }
+
+}
